--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,10 @@
 	</head>
 	<body>
 		@@include('blocks/header.html')
+		@@include('blocks/section01.html')
+		@@include('blocks/section02.html')
+		@@include('blocks/section03.html')
+		@@include('blocks/section04.html')
 		@@include('blocks/footer.html')
 		<script src="./js/index.bundle.js"></script>
 	</body>
