added Footer Menu
footer menu with links, not linked to anything, not layed out properly on side

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,5 +1,63 @@
 <footer class="footer">
 	<div class="container">
-		<h2>Footer</h2>
-	</div>
+		<menu>
+			<div class="footermenu">
+				<div class="menutitle">
+					<h6>Footer Menu</h6>
+				</div>
+
+				<div class="footermenu" id="menu">
+					<div class="footerlinklist">
+						<a href="home">Home</a>
+						<a href="about">About</a>
+						<a href="properties">Properties</a>
+						<a href="propertieysingle">Property Single</a>
+						<a href="agents">Agents</a>
+						<a href="Agenctssingle">Agencts Single</a>
+					</div>
+					<div class="footerlinklist">
+						<a href="blog">Blog</a>
+						<a href="blogpost">Blog post</a>
+						<a href="contact">Contact</a>
+						<a href="faq">FAQs</a>
+						<a href="wip">Coming Soon</a>
+						<a href="sub">Subscribe us</a>
+					</div>	
+				</div>
+			</div>
+			<div class="footermenu">
+				<div class="menutitle">
+					<h6>Follow us</h6>
+				</div>
+				<div class="footerlinklist">
+					<div class="iconlink">
+						<img src="../../img/facebookicons.svg" alt="">
+						<a href="facebook.com">Facebook</a>
+					</div>
+
+					<div class="iconlink">
+						<img src="../../img/twittericons.svg" alt="">
+						<a href="twitter.com">Twitter</a>						
+					</div>
+
+					<div class="iconlink">
+						<img src="../../img/instagramicons.svg" alt="">
+						<a href="instagram.com">Instagram</a>
+					</div>
+
+					<div class="iconlink">
+						<img src="../../img/linkedicons.svg" alt="">
+						<a href="linkedin.com">LinkedIn</a>
+					</div>
+
+					<div class="iconlink">
+						<img src="../../img/youtubeicons.svg" alt="">
+						<a href="youtube.com">YouTube</a>
+					</div>
+				</div>
+			</div>
+
+		</menu>
+
+	</div>	
 </footer>
