added Logo and example text

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -56,8 +56,16 @@
 					</div>
 				</div>
 			</div>
-
 		</menu>
+		<div class="company">
+			<div class="logo">
+				<img src="../../img/Logo Icon.svg" alt="">
+				<h6 class="bigTitle">EstatePro</h6>
+			</div>
+			<div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doin tempor incididunt labore et magna</p>
+			</div>
+		</div>
 
 	</div>	
 </footer>
